# cpphttpclient

./: README.md
httplib/: src
httplib/cppokio/: CMakeLists.txt  buffer.cpp  buffer.h  segment.cpp  segment.h  segmentpool.cpp  valid_error.h
httplib/http/: CMakeLists.txt  buffersocket.cpp  buffersocket.h  dns.cpp  http_parser.h  httpclient  httphead.cpp  httphead.h  httpurl.cpp  httpurl.h  make.sh  request.cpp  request.h  test.cpp
httplib/http/src/: base_socket.cpp  base_socket.h  buffersocket.cpp  buffersocket.h  dns.cpp  dns.h  http_parser.cpp  httphead.cpp  httphead.h  httpurl.cpp  httpurl.h  request.cpp  request.h  test.cpp
httplib/http/src/cppokio/: CMakeLists.txt  segmentpool.h  test.cpp
httplib/http/src/socket/: CMakeLists.txt  build.sh  client_socket.cpp  client_socket.h  inputstream.cpp  inputstream.h  outputstream.cpp  outputstream.h  real_inputstream.cpp  real_inputstream.h  real_outputstream.cpp  real_outputstream.h  socket  socket.cpp  socket.h  ssl_inputstream.cpp  ssl_inputstream.h  ssl_socket.cpp  ssl_socket.h  test.cpp
httplib/http/src/socket/test/: CMakeLists.txt  buildClient.sh  buildServer.sh  server  server.cpp  test.cpp  testsocket
httplib/http/src/thread/: CMakeLists.txt  event_thread.cpp  event_thread.h  task.h  test.cpp  thread.cpp  thread.h  thread_notify.cpp  thread_notify.h  thread_pool.cpp  thread_pool.h  work_thread.cpp  work_thread.h
httplib/http/src/utils/: util.h
httplib/utils/: utf8string.h  util.cpp  util.h
